network/argocd-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-http
  namespace: argocd
spec:
  entryPoints:
    - websecure # Ouve na porta 443 do Traefik
  routes:
    - match: Host(`argocd.devtechdojo.com.br`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80 # Porta HTTP do serviço do ArgoCD
