network/gitea-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gite-ingressroute 
  namespace: argocd
spec:
  entryPoints:
    - websecure # Ouve na porta 443 do Traefik
  routes:
    - match: Host(`repo.devtechdojo.com.br`)
      kind: Rule
      services:
        - name: gitea-http
          port: 3000
