network/teleport-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: teleport-custom-ingressroute
  namespace: teleport-cluster
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`teleport.devtechdojo.com.br`)
      kind: Rule
      services:
        - name: teleport
          port: 443
          scheme: https
          # 2. CORREÇÃO CRUCIAL: Nome 100% LIMPO, sem prefixo de namespace e sem @kubernetes!
          serversTransport: teleport-insecure-transport
  tls:
    secretName: cloudflare-origin-tls
